2004-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff.c (save_image): tell the user that we can't
	handle indexed images with alpha channel (bug #159600).

2004-11-27  Sven Neumann  <sven@gimp.org>

	* app/main.c
	* app/widgets/gimpenumstore.h
	* app/widgets/gimpunitstore.c
	* plug-ins/common/retinex.c: applied patch by Tim Mooney that
	removes extraneous ;

2004-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wmf.c (run): applied patch by Tim Mooney that
	increase the size of values[] to accomodate the use of
	file_wmf_load_thumb (bug #159601).

2004-11-27  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/drawable.pdb: minor change to the PDB docs.

	* libgimp/gimpdrawable_pdb.c
	* tools/pdbgen/pdb/drawable.pdb: regenerated.

2004-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icosave.c
	* plug-ins/winicon/main.[ch]: moved code around.

2004-11-26  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/dog.c: make sure the preview image type matches
	the source image type.

2004-11-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icosave.c: don't fiddle with the source image,
	a save plug-in should save, nothing else.

	* plug-ins/winicon/main.[ch]: handle all sorts of image types.
	Fixes bug #157803.

2004-11-26  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/drawable.pdb: fixed docs for
	gimp_drawable_type_with_alpha().

	* app/pdb/drawable_cmds.c
	* libgimp/gimpdrawable_pdb.c: regenerated.

2004-11-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/main.[ch] (ico_image_get_reduced_buf)
	* plug-ins/winicon/icodialog.c
	* plug-ins/winicon/icoload.c
	* plug-ins/winicon/icosave.c: fixed drawable handling. This
	plug-in is still a complete mess and needs a lot more work.

2004-11-26  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppaintoptions-gui.c (gimp_paint_options_gui): only
	show the Incremental toggle for tools that use it (bug #159306).

2004-11-26  Sven Neumann  <sven@gimp.org>
